basic sass finished, variables/snippets/functions/mixins

--- a/index.html
+++ b/index.html
@@ -9,12 +9,14 @@
     <title>Sass</title>
 </head>
 
-<body>
+<body class="plain">
     <div class="main">
-        <p class="main-paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos asperiores, iusto
+        <p class="main-paragraph1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos asperiores, iusto
             corrupti expedita velit
-            quisquam quaerat adipisci veniam officiis quis obcaecati maxime molestias sapiente odio vitae et id
-            mollitia? Natus.</p>
+            quisquam.</p>
+            <p class="main-paragraph2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos asperiores, iusto
+                corrupti expedita velit
+                quisquam.</p>
     </div>
 
 </body>
